<resources>
    <string name="app_name">ASOSSpaceX</string>
    <string name="main_spaceX_title">SpaceX</string>
    <string name="main_spaceX_subtitle_company">Company</string>
    <string name="filter_spacex_launches_contentDescription">Filter SpaceX launches</string>
    <string name="main_spaceX_subtitle_launches">Launches</string>
    <string name="launch_mission_image_contentDescription">Launch mission image</string>
    <string name="launch_success_image_contentDescription">Launch success image</string>
    <string name="launch_mission_key">Mission:</string>
    <string name="launch_date_time_key">Date/time:</string>
    <string name="launch_date_time_value">%s at %s</string>
    <string name="launch_rocket_key">Rocket:</string>
    <string name="launch_days_key">Days %s now:</string>

    <string name="company_info_description">%s was founded by %s in %s. It has now %s employees, %s launch sites, and is valued at USD %s</string>
    <string name="from">from</string>
    <string name="since">since</string>
    <string name="open_link_title">Open link</string>
    <string name="open_article_title">Launch article</string>
    <string name="open_wikipedia_title">Wikipedia</string>
    <string name="open_video_title">Video</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="error_message">Error happened. Try again.</string>
    <string name="filter_by_year">Filter by year:</string>
    <string name="is_launch_successful">Is launch successful:</string>
    <string name="sorting_order">Sorting order:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ascending">ASC</string>
    <string name="descending">DSC</string>
    <string name="filter_options">Filter options</string>
    <string name="apply_filter">Apply</string>
    <string name="empty_launches_state">No Launches</string>
</resources>
